--- a/css/admin-usu-form1.css
+++ b/css/admin-usu-form1.css
@@ -12,7 +12,7 @@
 }
 body {
     font-family: "be vietnam pro";
-    background-color: #ECEBEB;
+    background-color: white !important;
 }
 .fs-3 {
     font-family: "bayon";
