--- a/css/admin3.css
+++ b/css/admin3.css
@@ -2,6 +2,34 @@
     padding: 0;
     margin: 0;
 }
+/*cuadro de vuelos*/
+.centered-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .card-buscar {
+    width: 100%;
+    max-width: 900px;
+    min-height: 60vh;
+    font-family:"Be Vietnam Pro" ;
+  
+  }
+  .form-inline .form-group {
+    display: flex;
+    align-items: center;
+  }
+  .form-inline .form-control {
+    width: auto;
+    flex: 1;
+  }
+  
+  .text-formu{
+    font-weight: bold;
+  }
+  
+/**/
 .titulo {
     position: absolute;
     top: 45%;
