cambios realizados para pagina web

--- a/css/index1.css
+++ b/css/index1.css
@@ -166,7 +166,9 @@ body{
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-
+#espacio {
+  display: none;
+}
 /**/
 
 /* responsive pagina web*/
@@ -188,5 +190,8 @@ body{
 .preparate .son{
   margin: 20px auto;
 }
+  #espacio {
+    display: flex;
+  }
 }
 
